fixed a gap between 1350-1410px

--- a/style/contact.css
+++ b/style/contact.css
@@ -175,7 +175,7 @@
   .contact-desktop-image {
     position: absolute;
     display: block;
-    margin-left: 28%;
+    margin-left: 23%;
     margin-top: 7%;
     margin-right: auto;
     width: auto;
@@ -195,7 +195,7 @@
   .contact-desktop-image {
     position: absolute;
     display: block;
-    margin-left: 38%;
+    margin-left: 34%;
     margin-top: 7%;
     margin-right: auto;
     width: auto;
@@ -211,6 +211,39 @@
 }
 
 @media only screen and (min-width: 1350px) {
+  .contact {
+    height: 1000px;
+  }
+
+  .contact button {
+    margin-left: 200px;
+    margin-top: 400px;
+    padding-left: 45px;
+  }
+
+  .contact-desktop-image {
+    position: absolute;
+    display: block;
+    margin-left: 40%;
+    margin-top: 7%;
+    margin-right: auto;
+    width: auto;
+  }
+
+  .contact-mobile-image {
+    display: none;
+  }
+
+  .contact h2 {
+    padding-top: 200px;
+    font-size: 56px;
+    width: 80%;
+    line-height: 56px;
+    margin: auto;
+  }
+}
+
+@media only screen and (min-width: 1420px) {
   .contact {
     height: 1000px;
   }
