--- a/style/initiative.css
+++ b/style/initiative.css
@@ -141,7 +141,7 @@
   .initiative p {
     font-size: 24px;
     margin-top: 40px;
-    margin-left: 45%;
+    margin-left: 44%;
     margin-right: 6%;
     width: 550px;
   }
